--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,8 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  # vmImage: ubuntu-latest
+  pool: vmss-agentpool
 
 steps:
 - task: NodeTool@0
